// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__Auth Actions__ create an action when Login is unsuccessful 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "LOGIN__ERROR",
  },
]
`;

exports[`__Auth Actions__ creates a SET_ACCESS_TOKEN action 1`] = `
Object {
  "payload": "testToken",
  "type": "SET_ACCESS_TOKEN",
}
`;

exports[`__Auth Actions__ creates a SIGN_OUT action 1`] = `
Object {
  "type": "SIGN_OUT",
}
`;

exports[`__Auth Actions__ creates an action to Login 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "meta": undefined,
    "payload": Object {
      "_id": "testId",
      "accessToken": "testToken",
      "email": "test@mail.com",
      "nickname": "testNick",
      "password": "password",
    },
    "type": "LOGIN",
  },
]
`;

exports[`__Auth Actions__ creates an action to Signup 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "meta": undefined,
    "payload": Object {
      "accessToken": "testToken",
      "user": Object {
        "_id": "testId",
        "email": "test@mail.com",
        "nickname": "testNick",
        "password": "password",
      },
    },
    "type": "SIGNUP",
  },
]
`;

exports[`__Auth Actions__ creates an action to reset password 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "meta": undefined,
    "payload": true,
    "type": "PASSWORD_RESET",
  },
]
`;

exports[`__Auth Actions__ creates an action when Login returns a server error 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: We are encountering server issues. Please try again later.],
    "type": "LOGIN__ERROR",
  },
]
`;

exports[`__Auth Actions__ creates an action when Signup returns a server error 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: We are encountering server issues. Please try again later.],
    "type": "SIGNUP__ERROR",
  },
]
`;

exports[`__Auth Actions__ creates an action when resetting password is unsuccessful 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "PASSWORD_RESET__ERROR",
  },
]
`;

exports[`__Auth Actions__ creates an action when resetting password returns a server error 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: We are encountering server issues. Please try again later.],
    "type": "PASSWORD_RESET__ERROR",
  },
]
`;

exports[`__Auth Actions__ handles an unsuccessful Signup 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "SIGNUP__ERROR",
  },
]
`;
